--- a/bundle.yml
+++ b/bundle.yml
@@ -115,6 +115,9 @@ options :
             ENABLE_CLOUDSC_GPU_OMP_SCC=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_STACK=ON
+            ENABLE_CLOUDSC_GPU_OMP_SCC_STACKV2=ON
+            ENABLE_CLOUDSC_GPU_OMP_SCC_STACKV3=ON
+            ENABLE_CLOUDSC_GPU_OMP_SCC_RAW_STACK=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_K_CACHING=ON
 
     - with-cuda :
