--- a/bundle.yml
+++ b/bundle.yml
@@ -2,7 +2,7 @@
 ### Bundle
 
 name    : cloudsc-bundle
-version : 1.0.0-develop
+version : 1.5.3
 cmake : >
         CMAKE_LINK_DEPENDS_NO_SHARED=ON
         CMAKE_EXPORT_COMPILE_COMMANDS=ON
