Update Loki to 0.3.1

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -21,7 +21,10 @@ enable_imports = true  # Chase dependencies incurred via imports
 
 # Ensure that we are never adding these to the tree, and thus
 # do not attempt to look up the source files for these.
-disable = ['timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop']
+disable = [
+    'timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop',
+    'field_module'
+]
 
 
 # Call tree entry points ("driver" subroutines)
