Introduce build-hpc workflow

--- a/src/cloudsc_loki/cloudsc_loki_field_offload.config
+++ b/src/cloudsc_loki/cloudsc_loki_field_offload.config
@@ -14,7 +14,8 @@ disable = [
     'fokoop', 'get_environment_variable', '*%update_view',
     'cloudsc_mpi_*', 'ec_pmon', 'expand_*', 'load_and_expand_*',
     'validate_*', 'get_offsets', 'error_print',
-    '*get_device_data_rdonly', '*get_device_data_rdwr', '*sync_host_rdwr'
+    '*get_device_data_rdonly', '*get_device_data_rdwr', '*sync_host_rdwr',
+    'field_module', 'field_factory_module'
 ]
 
 ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
