--- a/.github/workflows/build-hpc.yml
+++ b/.github/workflows/build-hpc.yml
@@ -37,7 +37,7 @@ jobs:
       matrix:
         name:
           - ac-gpu nvhpc
-          # - lumi-g cce
+          - lumi-g cce
 
         include:
           - name: ac-gpu nvhpc
@@ -54,6 +54,8 @@ jobs:
             arch: ecmwf/hpc2020/nvhpc/22.11
             modules: ~
             build_options: --with-loki=ON --with-field-api=ON --with-mpi=ON
+            ctest_options: -E dwarf-cloudsc-fortran-sp
+              # TODO: This test triggers a SIGFPE, to be investigated
 
           - name: lumi-g cce
             site: lumi
@@ -65,19 +67,11 @@ jobs:
               #SBATCH --gpus-per-task=1
               #SBATCH --partition=dev-g
               #SBATCH --account=project_465000527
-            arch: eurohpc/lumi/cray-gpu/17.0.1
+            arch: eurohpc/lumi/cray-gpu/16.0.1
             modules: ~
-            #   - CrayEnv
-            #   - PrgEnv-cray
-            #   - cce/17.0.1
-            #   - craype-accel-amd-gfx90a
-            #   - rocm/6.0.3
-            #   - cray-fftw
-            #   - buildtools
             output_dir: /scratch/project_465000527/github-actions/dwarf-p-cloudsc/${{ github.run_id }}
             workdir: /scratch/project_465000527/github-actions/dwarf-p-cloudsc/${{ github.run_id }}
             build_options: --with-loki=ON
-            # cmake_options: -DOpenMP_C_LIB_NAMES=craymp -DOpenMP_CXX_LIB_NAMES=craymp -DOpenMP_Fortran_LIB_NAMES=craymp -DOpenMP_craymp_LIBRARY=craymp
             # ctest_options: -E gpu
 
 
